# Compact-Proofs-of-Retrievability

./: CMakeLists.txt  Makefile  README.md  cpor-app.c  cpor-core.c  cpor-file.c  cpor-genaro.c  cpor-keys.c  cpor-misc.c  cpor.h  headers.h
